# text-complex

./: CMakeLists.txt  README.md
include/text-complex/access/: api.h  bdict.h  blockbuf.h  brcvt.h  brmeta.h  ctxtmap.h  ctxtspan.h  fixlist.h  gaspvec.h  hashchain.h  inscopy.h  offtable.h  ringdist.h  ringslide.h  seq.h  util.h  woff2.h  zcvt.h  zutil.h
src/: CMakeLists.txt  api.c  bdict.c  bdict04.c  bdict05.c  bdict06.c  bdict07.c  bdict08.c  bdict09.c  bdict10.c  bdict11.c  bdict12.c  bdict13.c  bdict14.c  bdict15.c  bdict16.c  bdict17.c  bdict18.c  bdict19.c  bdict20.c  bdict21.c  bdict22.c  bdict23.c  bdict24.c  bdict_cb.c  bdict_p.h  blockbuf.c  blockbuf_p.h  brcvt.c  brmeta.c  ctxtmap.c  ctxtmap_p.h  ctxtspan.c  fixlist.c  fixlist_p.h  gaspvec.c  hashchain.c  inscopy.c  offtable.c  ringdist.c  (+7 more)
tcmplx-access/: CMakeLists.txt  api.c  api.h  ctxtmap.c  ctxtmap.h  fixlist.c  fixlist.h  inscopy.c  inscopy.h  offtable.c  ringdist.c  ringdist.h  seq.c  seq.h  util.c  woff2.c
tests/: CMakeLists.txt  tca_api.c  tca_bdict.c  tca_blockbuf.c  tca_brcvt.c  tca_brmeta.c  tca_ctxtmap.c  tca_ctxtspan.c  tca_fixlist.c  tca_gaspvec.c  tca_hashchain.c  tca_inscopy.c  tca_offtable.c  tca_ringdist.c  tca_ringslide.c  tca_seq.c  tca_util.c  tca_woff2.c  tca_zcvt.c  tca_zutil.c  testfont.c  testfont.h
tools/: CMakeLists.txt  tca_brcvt.c  tca_zcvt.c
